# JXL_py

./: CMakeLists.txt  CMakePresets.json  JXL_LAYER_NOTES.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: JXLPY_API.md  JXLPY_ENCODER_OPTIONS.md  JXLPY_USAGE.md  JXL_COMPRESSION_HEURISTICS.md  JXL_ENCODER_PARAMETER_REFERENCE.md
jxlpy/: __init__.py  _ffi.py  api.py  heuristics.py  metadata.py  multiframe.py
libjxl/lib/: jxl_extras.cmake
libjxl/lib/extras/enc/: jxl.cc
libjxl/lib/include/jxl/: encode.h
libjxl/lib/jxl/: enc_frame.cc  enc_frame.h  enc_modular.cc  enc_params.h  encode.cc  encode_internal.h
native/: jxlpy_native.cc  jxlpy_native.h
scripts/: analyze_jxl.py  analyze_multiframe.py  benchmark_high_effort_images.py  benchmark_jxl_layers.py  build_macos.sh  build_unix.sh  build_wheel.cmd  build_wheel.sh  build_windows.cmd  smoke_jxlpy.cmd  smoke_jxlpy.py  test_cross_format.py  test_extra_channels.py  test_multilayer.py  test_new_features.py
tests/: test_regressions.py
