[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jxlpy"
version = "0.1.0"
description = "Python CFFI bindings and helpers for libjxl"
requires-python = ">=3.10"
dependencies = [
  "cffi>=1.15",
  "numpy>=1.22",
]

[project.optional-dependencies]
torch = []

[tool.setuptools]
packages = ["jxlpy"]
